package main

import (
	"context"
	"fmt"
	"io"
	"log"
	"time"

	pb "Chimera-RAG/api/rag/v1"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

func main() {
	// 1. è¿æ¥ Python æœåŠ¡ (localhost:50051)
	// ä½¿ç”¨ insecure (éåŠ å¯†) æ¨¡å¼ï¼Œå› ä¸ºæ˜¯å†…éƒ¨é€šä¿¡
	conn, err := grpc.Dial("localhost:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("æ— æ³•è¿æ¥ Chimera å¤§è„‘: %v", err)
	}
	defer conn.Close()

	// 2. åˆ›å»ºå®¢æˆ·ç«¯
	client := pb.NewLLMServiceClient(conn)

	// 3. æ„é€ è¯·æ±‚
	req := &pb.AskRequest{
		Query:     "ä»€ä¹ˆæ˜¯ä¸‰æ°¯ç¡…çƒ·ï¼Ÿ",
		SessionId: "test-session-001",
		UseGraph:  true, // å¼€å¯å›¾è°±å¢å¼ºï¼Œæµ‹è¯• Python ç«¯çš„ mock é€»è¾‘
	}

	fmt.Printf("æ­£åœ¨å‘é€è¯·æ±‚: %s\n", req.Query)

	// 4. è°ƒç”¨æµå¼æ¥å£
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	stream, err := client.AskStream(ctx, req)
	if err != nil {
		log.Fatalf("è°ƒç”¨å¤±è´¥: %v", err)
	}

	// 5. å¾ªç¯è¯»å–æµå¼å“åº”
	for {
		resp, err := stream.Recv()
		if err == io.EOF {
			break // æµç»“æŸ
		}
		if err != nil {
			log.Fatalf("è¯»å–æµå¤±è´¥: %v", err)
		}

		// æ‰“å°æ¥æ”¶åˆ°çš„å†…å®¹
		if resp.ThinkingLog != "" {
			fmt.Printf("\n[ğŸ§  æ€è€ƒ]: %s", resp.ThinkingLog)
		}
		if resp.AnswerDelta != "" {
			fmt.Printf("%s", resp.AnswerDelta) // ä¸æ¢è¡Œï¼Œæ¨¡æ‹Ÿæ‰“å­—æœº
		}
		if len(resp.SourceDocs) > 0 {
			fmt.Printf("\n\n[ğŸ“š å¼•ç”¨]: %s (é¡µç : %s)", resp.SourceDocs[0].DocName, resp.SourceDocs[0].PageNum)
		}
	}
	fmt.Println("\n\n--- å¯¹è¯ç»“æŸ ---")
}
